# sik-mikrozadania

./: echo-client.c  echo-server.c
lab3/: jm419502_cw3.txt
lab5/: CMakeLists.txt  echo-client.c  echo-server.c
lab6/: CMakeLists.txt  file-client-tcp.c  file-server-tcp.c
lab7/: CMakeLists.txt  client.c  err.c  poll_server_telnet.c
lab8/: CMakeLists.txt  err.c  time-client.c  time-server.c
